Add basic processing of JaCoCo report and CK metrics; add tests with test-project